cmake_minimum_required(VERSION 3.5)
project(opencv_yanli)

set(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(OpenCV REQUIRED)
MESSAGE("OpenCV VERSION : ${OPENCV_VERSION}")

INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OPENCV_LIB_DIR})

ADD_EXECUTABLE(answer_1 answer_1.cpp)
TARGET_LINK_LIBRARIES(answer_1 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_2 answer_2.cpp)
TARGET_LINK_LIBRARIES(answer_2 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_3 answer_3.cpp)
TARGET_LINK_LIBRARIES(answer_3 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_4 answer_4.cpp)
TARGET_LINK_LIBRARIES(answer_4 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_5 answer_5.cpp)
TARGET_LINK_LIBRARIES(answer_5 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_6 answer_6.cpp)
TARGET_LINK_LIBRARIES(answer_6 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_7 answer_7.cpp)
TARGET_LINK_LIBRARIES(answer_7 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_8 answer_8.cpp)
TARGET_LINK_LIBRARIES(answer_8 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_9 answer_9.cpp)
TARGET_LINK_LIBRARIES(answer_9 ${OpenCV_LIBS} )

ADD_EXECUTABLE(test_10  test_10.cpp)
TARGET_LINK_LIBRARIES( test_10 ${OpenCV_LIBS} )

