cmake_minimum_required(VERSION 3.5)
project(opencv_yanli)

set(CMAKE_CXX_STANDARD 14)

FIND_PACKAGE(OpenCV REQUIRED)
MESSAGE("OpenCV VERSION : ${OPENCV_VERSION}")

INCLUDE_DIRECTORIES(${OPENCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OPENCV_LIB_DIR})

ADD_EXECUTABLE(answer_1 answer_1.cpp)
TARGET_LINK_LIBRARIES(answer_1 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_2 answer_2.cpp)
TARGET_LINK_LIBRARIES(answer_2 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_3 answer_3.cpp)
TARGET_LINK_LIBRARIES(answer_3 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_4 answer_4.cpp)
TARGET_LINK_LIBRARIES(answer_4 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_5 answer_5.cpp)
TARGET_LINK_LIBRARIES(answer_5 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_6 answer_6.cpp)
TARGET_LINK_LIBRARIES(answer_6 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_7 answer_7.cpp)
TARGET_LINK_LIBRARIES(answer_7 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_8 answer_8.cpp)
TARGET_LINK_LIBRARIES(answer_8 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_9 answer_9.cpp)
TARGET_LINK_LIBRARIES(answer_9 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_10 answer_10.cpp)
TARGET_LINK_LIBRARIES(answer_10 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_11 answer_11.cpp)
TARGET_LINK_LIBRARIES(answer_11 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_12 answer_12.cpp)
TARGET_LINK_LIBRARIES(answer_12 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_13 answer_13.cpp)
TARGET_LINK_LIBRARIES(answer_13 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_14 answer_14.cpp)
TARGET_LINK_LIBRARIES(answer_14 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_15 answer_15.cpp)
TARGET_LINK_LIBRARIES(answer_15 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_16 answer_16.cpp)
TARGET_LINK_LIBRARIES(answer_16 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_17 answer_17.cpp)
TARGET_LINK_LIBRARIES(answer_17 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_18 answer_18.cpp)
TARGET_LINK_LIBRARIES(answer_18 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_19 answer_19.cpp)
TARGET_LINK_LIBRARIES(answer_19 ${OpenCV_LIBS} )


ADD_EXECUTABLE(answer_21 answer_21.cpp)
TARGET_LINK_LIBRARIES(answer_21 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_22 answer_22.cpp)
TARGET_LINK_LIBRARIES(answer_22 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_23 answer_23.cpp)
TARGET_LINK_LIBRARIES(answer_23 ${OpenCV_LIBS} )

ADD_EXECUTABLE(answer_24 answer_24.cpp)
TARGET_LINK_LIBRARIES(answer_24 ${OpenCV_LIBS} )

ADD_EXECUTABLE(test_10  test_10.cpp)
TARGET_LINK_LIBRARIES( test_10 ${OpenCV_LIBS} )

